Update to v1.1.0 - Add build scripts, plugin structure, and locale improvements

--- a/src/BootstrapMultiSelect.MVC/wwwroot/css/bootstrap-multiselect.css
+++ b/src/BootstrapMultiSelect.MVC/wwwroot/css/bootstrap-multiselect.css
@@ -1,5 +1,5 @@
 /*!
- * Bootstrap MultiSelect - CSS Styles
+ * Bootstrap MultiSelect - CSS Styles v1.1.0
  * 
  * Additional styles and enhancements for the Bootstrap MultiSelect plugin
  * 
